# KMS

./: .gitignore  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  main.rs
lib/: Cargo.toml
lib/migrations/10000000000000_create_users/: up.sql
lib/migrations/2023-03-16-151006_create_kanji/: up.sql
lib/migrations/2023-03-16-172307_create_vocab/: up.sql
lib/migrations/30000000000000_create_kanji/: down.sql  up.sql
lib/migrations/40000000000000_create_vocab/: up.sql
lib/src/: lib.rs  models.rs  schema.rs
server/: .env  Cargo.toml
server/migrations/20000000000000_create_group/: up.sql
server/migrations/40000000000000_create_vocab/: down.sql
server/src/: commands.rs  main.rs
server/src/lib/: mod.rs  models.rs  schema.rs
