[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = [ "api-all" ] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
data-encoding = "2.3.3"
ring = "0.16.20"
once_cell = "1.16.0"
