[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
regex = "1.7.1"
