[package]
name = "kms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
lib = { path = "../lib" }
serde_json = "1.0"
chrono = "0.4.24"
